2.0.8.dev0
 * #1114: Document systemd configuration changes for the ZFS filesystem hook.
 * #1118: Fix a bug in which Borg hangs during database backup when different filesystems are in
   use.
 * #1125: Clarify documentation about ZFS, Btrfs, and LVM snapshotting when a separate
   filesystem is mounted in the source directory. (Spoiler: The separate filesystem doesn't get
   included in the snapshot.)
 * #1126: Create LVM snapshots as read-write to avoid an error when snapshotting ext4 filesystems
   with orphaned files that need recovery.
 * #1133: Fix the "spot" check to include borgmatic configuration files that were backed up to
   support the "bootstrap" action.
 * #1139: Set "borgmatic" as the user agent when connecting to monitoring services.
 * When running tests, use Ruff for faster and more comprehensive code linting and formatting,
   replacing Flake8, Black, isort, etc.
 * Switch from pipx to uv for installing development tools, and added tox-uv for speeding up test
   environment creation. See the developer documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/develop-on-borgmatic/

2.0.7
 * #1032: Fix a bug in which a Borg archive gets created even when a database hook fails.
 * #1043: Support Btrfs subvolume paths in "source_directories" even when the subvolume is mounted
   elsewhere.
 * #1048: Ignore Btrfs subvolumes whose read-only status can't be determined.
 * #1083: Add "debug_passphrase"/"display_passphrase" options and a "{unixtime}" placeholder in
   support of Borg 2 features.
 * #1099: Clarify documentation on command hooks order of execution.
 * #1100: Fix a bug in which "borg --version" failing isn't considered a "fail" state in a command
   hook.
 * #1108: Fix a bug in which quoted "extra_borg_options" values containing spaces are passed to Borg
   incorrectly.
 * #1108: Add a "--comment" flag to the "create" action for creating an archive with a comment.